# evzone-ml-service

./: .env.example  .gitignore  CACHE_POLICY.md  CREDENTIALS_DOCKER_GUIDE.md  Dockerfile  ERROR_FIXES.md  INTEGRATION.md  INTEGRATION_SUMMARY.md  LICENSE  ML_INTEGRATION.md  QUICKSTART_INTEGRATED.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP.md  benchmark.py  benchmark_batch.py  docker-compose.yml  evaluate_models.py  pyproject.toml  pytest.ini  requirements-no-tf.txt  requirements.txt  test_integration.py  train_models.py
notebooks/: .gitkeep
scripts/: data_pipeline.sh  deploy_model.sh  generate_datasets.py  init_db.py  test_endpoints.py  train_anomaly_model.py  train_failure_model.py  train_maintenance_model.py  train_models.sh
scripts/reports/: endpoint_report_20260106_131503Z.json
src/: __init__.py  main.py
src/api/: dependencies.py
src/config/: settings.py
src/database/: connection.py  models.py
src/kafka/: consumer.py  producer.py  topics.py
src/services/: cache_service.py  data_collector.py  feature_extractor.py  model_manager.py  prediction_service.py
src/utils/: errors.py  logging.py  metrics.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_api_endpoints_real.py  test_api_error_paths.py  test_data_persistence.py
tests/unit/: test_api_models.py  test_api_predictions.py  test_cache_service.py  test_data_collector.py  test_database_connection.py  test_database_models.py  test_feature_extractor.py  test_kafka_consumer.py  test_kafka_producer.py  test_main.py  test_model_manager.py  test_models.py  (+6 more)
(+10 files in other folders)
